--- a/package.json
+++ b/package.json
@@ -17,6 +17,17 @@
   },
   "homepage": "https://github.com/surajkundoor/riafy#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "@google-cloud/vision": "^2.3.2",
+    "bootstrap": "^5.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "http-server": "^0.12.3",
+    "lodash": "^4.17.21",
+    "mime": "^1.6.0",
+    "multer": "^1.4.2",
+    "react-bootstrap": "^1.6.0",
+    "sequelize": "^6.6.2",
+    "tesseract.js": "^2.1.4"
   }
 }
